--- a/src/main/resources/templates/add-manufacturer.html
+++ b/src/main/resources/templates/add-manufacturer.html
@@ -11,24 +11,24 @@
                 <form action="/manufacturers/add" method="POST">
                     <input id="id" type="hidden" name="id" th:value="(${manufacturer} != null ? ${manufacturer.getId()} : '')">
                     <div class="form-group">
-                        <label for="name">Manufacturer's name</label>
+                        <label for="name">Manufacturer name</label>
                         <input type="text"
                                class="form-control"
                                id="name"
                                name="name"
                                th:value="(${manufacturer} != null ? ${manufacturer.getName()} : '')"
                                required
-                               placeholder="Enter manufacturer's name">
+                               placeholder="Enter category name">
                     </div>
                     <div class="form-group">
-                        <label for="name">Manufacturer's address</label>
+                        <label for="name">Manufacturer address</label>
                         <input type="text"
                                class="form-control"
-                               id="description"
-                               name="description"
-                               th:value="(${manufacturer} != null ? ${category.getAddress()} : '')"
+                               id="address"
+                               name="address"
+                               th:value="(${manufacturer} != null ? ${manufacturer.getAddress()} : '')"
                                required
-                               placeholder="Enter manufacturer's address">
+                               placeholder="Enter category description">
                     </div>
 
                     <button id="submit" type="submit" class="btn btn-primary">Submit</button>
