--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -21,6 +21,17 @@
                         <tr th:each="category : ${categories}" class="category">
                             <td th:text="${category.getName()}"></td>
                             <td th:text="${category.getDescription()}"></td>
+                            <td class="text-right">
+                                <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                                    <form th:action="@{'/categories/delete/{id}' (id=${category.getId()})}"
+                                          th:method="DELETE">
+                                        <button type="submit"
+                                                class="btn btn-sm btn-danger delete-category">
+                                            <i class="fa fa-trash">Delete</i>
+                                        </button>
+                                    </form>
+                                </th:block>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
